Correction on coversé

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -310,11 +310,12 @@ h3 {
   .cover {
     display: none;
     max-width: 870px;
-    max-height: 80vh;
 
     img {
       width: 100%;
       height: auto;
+      max-width: 60vw;
+      max-height: 80vh;
       float: right;
     }
   }
